test/scc_test/stmt/semantic-errors/021.a
021.t:4:12: error: expression must have scalar type